--- a/css/styles.css
+++ b/css/styles.css
@@ -17,8 +17,6 @@ body {
 .header-container {
   display: flex;
 }
-.header-logo {
-}
 .header-icon {
   fill: #fff;
   
@@ -32,8 +30,7 @@ body {
   align-items: center;
   gap: 82px;
 }
-.header-list {
-}
+
 .header-link {
   font-size: 18px;
   color: #fff;
@@ -47,9 +44,6 @@ body {
   background-position: center;
   background-size: cover;
   position: relative;
-}
-.hero-section {
-
 }
 .hero-tittle {
   padding-top: 240px;
@@ -87,10 +81,6 @@ body {
   background-repeat: no-repeat;
   background-position:left;
   text-align: center;
-}
-.hero-input::before{  
- 
-
 }
 .hero-input::placeholder{
   color: #fff;
@@ -130,8 +120,6 @@ body {
   display: flex;
   gap: 55px;
 }
-.benefits-item {
-}
 .benefits-icon{
   margin-bottom: 37px;
 }
@@ -160,3 +148,152 @@ body {
   fill: #006DFE;
   margin-left: 25px;
 }
+/*------------------- INSPIRED ----------------- */
+.inspired {
+  margin-top: 130px;
+}
+.inspired-town {
+  
+  align-items: center;
+}
+.inspired-town-ttile{
+  display: flex;
+  align-items: baseline;
+
+}
+.town-tittle {
+  font-weight: 500;
+  font-size: 35px;
+  color: #102746;
+  position: relative;
+}
+.town-tittle::before{
+content: "";
+position: absolute;
+bottom: -7px;
+left: 0;
+width: 283px;
+height: 2px;
+background-color: #006DFE;
+
+}
+.inspired-link{
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #006DFE;
+  display: inline-block;
+  margin-left: auto;
+}
+.inspired-link span{
+  fill: #006DFE;
+  margin-left: 25px;
+}
+
+.description-list {
+  display: flex;
+  gap: 100px;
+}
+.description-item {
+}
+.description-icon {
+}
+.description-tittle-text {
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 40px;
+  color: #102746;
+  margin-bottom: 85px;
+}
+.description-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  color: #102746;
+  margin-bottom: 58px;
+}
+.description-link {
+  margin-bottom: 126px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  color: #006DFE;
+}
+.town-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  margin-bottom: 10px;
+  margin-top: 36px;
+}
+
+.image {
+  position: relative;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  overflow: hidden;
+}
+
+.image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  
+}
+.image::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(21, 24, 36, 0.4);
+  transition: background 0.3s ease;
+}
+.image1 {
+  grid-column: span 2;
+  grid-row: span 1;
+  
+}
+
+.image2 {
+  grid-column: span 2;
+  grid-row: span 1;
+}
+
+.image3 {
+  grid-column: span 1;
+  grid-row: span 1;
+}
+
+.image4 {
+  grid-column: span 1;
+  grid-row: span 1;
+}
+
+.image5 {
+  grid-column: span 1;
+  grid-row: span 1;
+  
+}
+
+.caption {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  color: #fff;
+  padding: 5px;
+  font-size: 40px;
+  font-weight: 700;
+}
+.town-grid-two{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  margin-bottom: 136px;
+}
+.image:hover img {
+  transform: scale(0.9); 
+  transition: 2.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
